EDIT: all step requirements

--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar">
         <div class="sidebar_icon">
-            <a href="#" id="sidebar_toggle">
+            <a href="javascript:void(0)" id="sidebar_toggle">
                 <img src=./icon/bars-solid-full.svg alt="사이드바">
             </a>
         </div>
@@ -172,7 +172,6 @@
         </button>
     </div>
     <div class="video_list">
-
         <div class="video_thumbnail">
             <a href="video_page.html?videoId=1">
                 <img src="./thumbnail/thumbnail_1.png" class="thumbnail_image" alt="썸네일">
@@ -277,6 +276,7 @@
                 </div>
             </a>
         </div>
+
     </div>
 </body>
 </html>
