ADD: like&dislike function

--- a/video_page.html
+++ b/video_page.html
@@ -172,12 +172,12 @@
                     <button class="subscribe">구독</button>
                     <div class="func_btn">
                         <div class="func_like">
-                            <button class="like">
-                                <img src="icon/hand-thumbs-up.svg">
-                                <span>좋아요</span>
+                            <button class="like" id="like">
+                                <img id="likeicon" src="icon/hand-thumbs-up.svg">
+                                <span id="count">108</span>
                             </button>
-                            <button class="dislike">
-                                <img src="icon/hand-thumbs-down.svg">
+                            <button class="dislike" id="dislike">
+                                <img id="dislikeicon" src="icon/hand-thumbs-down.svg">
                             </button>
                         </div>
                         <button class="offline_store">오프라인 저장</button>
